submit relation table
Giving new feature for submitting form which is to update a related table based on primary table.
